Fix body style and update ios-src URL

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <script type="module"
     src="https://unpkg.com/@google/model-viewer@latest/dist/model-viewer.min.js"></script>
 </head>
-  <body style=",margin:0; padding:0">
+  <body style="margin:0; padding:0;">
      <model-viewer
         src="saikoro.glb"
-        ios-src="https://takako-2023310-source.github.io/saikoro/saikoroAR.usdz"
+        ios-src="https://takako-2023310-source.github.io/saikoro/saikoro.usdz"
   alt="saikoro 3D"
   ar-modes="webxr scene-viewer quick-look"
   auto-rotate
