--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   ar-modes="webxr scene-viewer quick-look"
   auto-rotate
   camera-controls
-  style="width:100vw; height:100vh"
+  style="width:100vw; height:100vh;"
+  scale="1"
   camera-target="0m 0m 0m">
   <button slot="ar-button">ARで表示</button>
 </model-viewer>
