--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body style="margin:0; padding:0;">
     <model-viewer
       src="saikoro.glb"
-      ios-src="https://takako-2023309-collab.github.io/saikoro/saikoro.usdz"
+      ios-src="saikoro.usdz"
       alt="dies 3D"
       ar
       ar-modes="webxr scene-viewer quick-look"
