--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
   </head>
   <body style="margin:0; padding:0;">
     <model-viewer
-      src="saikoro.glb"
-      ios-src="saikoro.usdz"
-      alt="dies 3D"
-      ar
-      ar-modes="webxr scene-viewer quick-look"
-      auto-rotate
-      camera-controls
-      style="width:100vw; height:100vh;"
-      camera-target="0m 0.5m 0m">
-    <button slot="ar-button">ARで表示</button>
+  src="saikoro.glb"
+  ios-src="saikoro.usdz"
+  alt="サイコロ 3D モデル"
+  ar
+  ar-modes="webxr scene-viewer quick-look"
+  auto-rotate
+  camera-controls
+  style="width:100vw; height:100vh;"
+  camera-target="0 0.5 0">
+  <button slot="ar-button">ARで表示</button>
     </model-viewer>
   </body>
 </html>
