Update alt text for 3D model in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <model-viewer
   src="saikoro.glb"
   ios-src="saikoro.usdz"
-  alt="サイコロ 3D モデル"
+  alt="saikoro 3D model"
   ar
   ar-modes="webxr scene-viewer quick-look"
   auto-rotate
