--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@ src="https://unpkg.com/@google/model-viewer@latest/dist/model-viewer.min.js"></s
 <model-viewer
 src="saikoro.glb"
 ios-src="saikoro.usdz"
-alt="saikoro 3D model"
+alt="saikoro3Dmodel"
 ar
 ar-modes="webxr scene-viewer quick-look"
 auto-rotate
 camera-controls
 style="width:100vw; height:100vh;"
-camera-target="0 0 0">
+camera-target="0m 0.5m 0m">
 <button slot="ar-button">ARで表示</button>
 </model-viewer>
 </body>
