--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ src="https://unpkg.com/@google/model-viewer@latest/dist/model-viewer.min.js"></s
 <model-viewer
 src="saikoro.glb"
 ios-src="saikoro.usdz"
-alt="saikoro3Dmodel"
+alt="saikoro3D"
 ar
 ar-modes="webxr scene-viewer quick-look"
 auto-rotate
